<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.NewTaskActivity">
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">  <TextView
        android:id="@+id/new_task_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/new_task"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textSize="32sp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="20dp"/>

    <EditText
        android:id="@+id/new_task_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/title"
        app:layout_constraintTop_toBottomOf="@id/new_task_label"
        android:layout_marginTop="20sp"/>

    <EditText
        android:id="@+id/new_task_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:gravity="start|top"
        android:inputType="textMultiLine"
    app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/new_task_title"
        android:layout_marginTop="20sp"
        android:hint="@string/description"
        android:lines="5"
        android:foregroundGravity="top|left"
        android:scrollbars="vertical"
        />

    <EditText
        android:id="@+id/new_task_price"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/new_task_description"
        android:inputType="numberDecimal"
        android:layout_marginTop="20sp"
        android:hint="@string/task_price_in_points"/>


    <EditText
        android:id="@+id/new_task_address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:gravity="start|top"
        android:inputType="textMultiLine"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/new_task_price"
        android:layout_marginTop="20sp"
        android:hint="@string/address"
        android:lines="2"
        android:foregroundGravity="top|left"
        android:scrollbars="vertical"
        />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/add_new_task"
        app:layout_constraintTop_toBottomOf="@id/new_task_address"
        android:layout_marginTop="20sp"
        android:text="@string/new_task"/>
</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>